--- a/ifxdevsim/test/ifxdevsim/test_mdrc_param_duplication/mdrc.dsi.yml
+++ b/ifxdevsim/test/ifxdevsim/test_mdrc_param_duplication/mdrc.dsi.yml
@@ -7,16 +7,16 @@ nhv:
   metrics:
   - idsat
   - vtlin
-    #  - cggi
+  - cggi
   mdrc:
     2a:
       compare:
         control:
           simulator: titan
           #string: ['Simulator checks','Titan']
-      string:
-        s1: 'Simulator  checks'
-        s2: 'Titan'
+          strings:
+            s1: 'Simulator  checks'
+            s2: 'Titan'
       limit:
         note: 0.1%
         fail: 1%
@@ -25,9 +25,9 @@ nhv:
         control:
           simulator: hspice
             #string: ['Simulator checks','Hspice']
-      string:
-        s1: 'Simulator  checks'
-        s2: 'Hspice'
+          strings:
+            s1: 'Simulator  checks'
+            s2: 'Hspice'
       limit:
         note: 0.1%
         fail: 1%
@@ -35,9 +35,9 @@ nhv:
       check:
         metrics: idsat
           #string: ['Verify a metric is within limits','IDSAT']
-      string:
-        s1: 'Verify a metric is within limits'
-        s2: 'IDSAT'
+        strings:
+          s1: 'Verify a metric is within limits'
+          s2: 'IDSAT'
       limit:
         min: 500
         max: 1000
